--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,20 @@
+annotated-types==0.7.0
+anyio==4.8.0
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+exceptiongroup==1.2.2
+google-auth==2.38.0
+google-genai==1.5.0
+grpcio==1.71.0
+grpcio-tools==1.71.0
+h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.7
+httpx==0.28.1
+hyperframe==6.1.0
+idna==3.10
 numpy==2.0.2
 portalocker==2.10.1
 protobuf==5.29.3
@@ -6,7 +23,10 @@ pyasn1_modules==0.4.1
 python-dotenv==1.0.1
 qdrant-client==1.13.3
 requests==2.32.3
+rsa==4.9
+sniffio==1.3.1
+typing-inspection==0.4.0
+typing_extensions==4.12.2
+urllib3==2.3.0
+websockets==14.2
 beautifulsoup4==4.13.3
-boto3==1.37.13
-streamlit
-ntlk
